added two more tests

--- a/test-output/testng_metrics.html
+++ b/test-output/testng_metrics.html
@@ -65,8 +65,8 @@
 								<table style="width:100%">
 									<tbody>
 										<tr style="height:100%">
-											<td style="font-size:60px; color:rgb(105, 135, 219)">1</td>
-											<td style="font-size:60px; color:#2ecc71">1</td>
+											<td style="font-size:60px; color:rgb(105, 135, 219)">3</td>
+											<td style="font-size:60px; color:#2ecc71">3</td>
 										</tr>
 										<tr>
 											<td>
@@ -149,7 +149,7 @@
  executeDataTable('#cm',3);
  executeDataTable('#tm',3);
  	executeDataTable('#mm',3);
- 	createPieChart(1,0,0,'testChartID','Test Status:');
+ 	createPieChart(3,0,0,'testChartID','Test Status:');
  	createBarGraph('#cm',0,3,5,'classBarID','Number of failures ','Class'); 
  	createBarGraph('#tm',1,3,10,'testsBarID','Elapsed Time(s) ','Test');
  	createBarGraph('#mm',1,3,10,'methodsBarID','Elapsed Time(s) ','Method');
@@ -174,8 +174,8 @@
  <tbody>
 <tr>
 <td style="word-wrap: break-word;max-width: 300px; white-space: normal;text-align:left;">LoginFunctionality</td>
-<td style="color:teal">1</td>
-<td style="color:green">1</td>
+<td style="color:teal">3</td>
+<td style="color:green">3</td>
 <td style="color:red">0</td>
 <td style="color:#9E6B6A">0</td>
 <td>100.0</td>
@@ -188,7 +188,7 @@
  </div>
  <div class="tabcontent" id="testMetrics">
  <h4><b><i class="fa fa-list-alt" style="color:PALEVIOLETRED"></i> Test Metrics</b></h4>
- <h6 style="text-align:right">Total Execution Time: <b style="color:Red; text-align:right">00:00:03</b></h6>
+ <h6 style="text-align:right">Total Execution Time: <b style="color:Red; text-align:right">00:00:04</b></h6>
  <hr/>
  </h6>
  <table class="table row-border tablecard" id="tm">
@@ -205,7 +205,19 @@
 <tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginFunctionality</td>
 <td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">login</td>
 <td style="color: green">PASS</td>
-<td style="text-align:center">3</td>
+<td style="text-align:center">4</td>
+<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
+</tr>
+<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginFunctionality</td>
+<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">logout</td>
+<td style="color: green">PASS</td>
+<td style="text-align:center">0</td>
+<td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
+</tr>
+<tr><td style="word-wrap: break-word;max-width: 200px; white-space: normal; text-align:left">LoginFunctionality</td>
+<td style="word-wrap: break-word;max-width: 250px; white-space: normal;; text-align:left">logReport</td>
+<td style="color: green">PASS</td>
+<td style="text-align:center">0</td>
 <td style="word-wrap: break-word;max-width: 300px; white-space: normal; text-align:left"></td>
 </tr>
  </tbody>
