--- a/old/Practice Suite/methods.html
+++ b/old/Practice Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Practice Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6be73">  <td>21/10/20 12:14:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionality.login()[pri:0, instance:com.login.LoginFunctionality@dd0c991]">login</td> 
-  <td>main@1117519786</td>   <td></td> </tr>
-<tr bgcolor="b6be73">  <td>21/10/20 12:14:19</td>   <td>-47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionality.logReport()[pri:0, instance:com.login.LoginFunctionality@dd0c991]">logReport</td> 
-  <td>main@1117519786</td>   <td></td> </tr>
-<tr bgcolor="b6be73">  <td>21/10/20 12:14:40</td>   <td>20581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionality.logout()[pri:0, instance:com.login.LoginFunctionality@dd0c991]">logout</td> 
-  <td>main@1117519786</td>   <td></td> </tr>
+<tr bgcolor="b894f2">  <td>21/10/20 12:58:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionality.logout()[pri:0, instance:com.login.LoginFunctionality@6bf0219d]">logout</td> 
+  <td>main@1249875355</td>   <td></td> </tr>
+<tr bgcolor="b894f2">  <td>21/10/20 12:58:20</td>   <td>-10278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionality.login()[pri:0, instance:com.login.LoginFunctionality@6bf0219d]">login</td> 
+  <td>main@1249875355</td>   <td></td> </tr>
+<tr bgcolor="b894f2">  <td>21/10/20 12:58:20</td>   <td>-10333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginFunctionality.logReport()[pri:0, instance:com.login.LoginFunctionality@6bf0219d]">logReport</td> 
+  <td>main@1249875355</td>   <td></td> </tr>
 </table>
